--- a/style.css
+++ b/style.css
@@ -3,6 +3,39 @@ html, body {
   padding: 0;
   font-size: 12px;
 }
-canvas {
-  display: block;
+button {
+  position:absolute;
+  top:460px;
+  left:630px;
+  width:55px;
+}
+/*iframe*/
+@media only screen and (max-width: 600px) {
+  html, body {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+  canvas {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 190%;
+      height: auto;
+      z-index: 1;
+  }
+  button {
+  top:auto !important;
+  left:auto !important;
+  bottom:10px !important;
+  right:10px !important;
+  z-index: 10;
+  font-size: 8px;
+  padding: 1px;
+  width:40px !important;
+}
 }
