--- a/style.css
+++ b/style.css
@@ -3,12 +3,30 @@ html, body {
   padding: 0;
   font-size: 12px;
 }
+
 button {
   position:absolute;
   top:700px;
   left:930px;
   width:55px;
 }
+
+#title {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.loadingClass {
+  font-family: 'Segoe UI',Arial,sans-serif;
+  font-size: 12px;
+  margin: 20px;
+}
+
+.loadingClass a {
+  text-decoration: none;
+  color: rgb(51, 51, 51);
+}
+
 /*iframe*/
 @media only screen and (max-width: 600px) {
   html, body {
@@ -29,13 +47,13 @@ button {
       z-index: 1;
   }
   button {
-  top:auto !important;
-  left:auto !important;
-  bottom:10px !important;
-  right:10px !important;
-  z-index: 10;
-  font-size: 8px;
-  padding: 1px;
-  width:40px !important;
-}
+    top:auto !important;
+    left:auto !important;
+    bottom:10px !important;
+    right:10px !important;
+    z-index: 10;
+    font-size: 8px;
+    padding: 1px;
+    width:40px !important;
+  }
 }
