--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&family=Playball&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&display=swap');
 html, body {
   margin: 0;
   padding: 0;
@@ -88,6 +88,7 @@ button {
   font-size: 2em;
   cursor: pointer;
   transition: 0.3s;
+  display: none;
 }
 
 #SidebarBtn a {
@@ -145,14 +146,14 @@ a {
 
 #aboutTitle {
   font-size: 1.5em;
-  font-weight: 1600;
+  margin-top: 1.5em;
   text-align: center;
 }
 
 #aboutDescription {
   padding-left: 40px;
   padding-right: 30px;
-  margin: 20px 0px 0px 0;
+  margin: 30px 0px 0px 0;
   max-width: 320px;
 }
 
