--- a/style.css
+++ b/style.css
@@ -170,6 +170,25 @@ a {
   margin: 30px 0px 0px 0;
   max-width: 320px;
 }
+#p5_loading + #startButton {
+  color:grey;
+  border-color: grey;
+}
+#startButton {
+  position:relative;
+  width:100px;
+  padding:5px;
+  border:black solid 1px;
+  margin:30px auto 10px;
+  text-align: center;
+  cursor:pointer;
+  border-radius: 4px;
+}
+#startButton:hover{
+  background-color: black;
+  color:white;
+  transition: background-color 0.5s;
+}
 
 #aboutClose {
   margin-top: 20px;
@@ -179,7 +198,9 @@ a {
 #aboutClose a {
   color: #666;
 }
-
+#aboutClose img {
+  width:60px;
+}
 #aboutClose a:hover {
   color: darkred;
 }
